--- a/Code/modules/app-files/offline.ejs
+++ b/Code/modules/app-files/offline.ejs
@@ -44,12 +44,12 @@
 
     <% installedGames.forEach((game) => { %>
     <div class="card" style="float:left; display:inline; margin:10px;">
-      <img src="/<%= game["name"] %>/logo" alt="logo" width="250px" height="125px" style="width:100%">
+      <img src="/<%= game["folderName"] %>/logo" alt="logo" width="250px" height="125px" style="width:100%">
       <div class="container">
         <h4><b><%= game["name"] %></b></h4> 
         <p style="width:234px;"><%= game["description"] %></p>
-        <a href="/<%= game["name"] %>/info"><button>Info</button></a>
-        <button onclick="launchGame('<%= game["name"] %>', '<%= ports[game["name"]] %>')">Launch</button>
+        <a href="/<%= game["folderName"] %>/info"><button>Info</button></a>
+        <button onclick="launchGame('<%= game["folderName"] %>', '<%= ports[game["folderName"]] %>')">Launch</button>
       </div>
     </div>
   <% }); %>
