--- a/Code/app-files/info.ejs
+++ b/Code/app-files/info.ejs
@@ -7,24 +7,37 @@
   </head>
   <body>
     <div class="header">
-      <a href="about" class="logo">GameJS</a>
+      <a href="/about" class="logo">GameJS</a>
       <div class="header-right">
         <a href="/offline">Offline</a>
         <a href="/online">Online</a>
       </div>
     </div>
-    
+
     <br>
-    <img src="/<%= pathName %>/logo" width="250" height="125"></img>
+    <% if (type == 'GJS') { %>
+        <img src="/GJS/<%= pathName %>/logo" width="250" height="125"></img>
+    <% } else { %>
+        <img src="/<%= pathName %>/logo" width="250" height="125"></img>
+    <% } %>
     <h1><%= name %> - Info</h1>
     <p><b><%= description %></b></p>
+    <p><i>Type: <%= type %></i></p>
     <br>
     <p>Made for GameJS <%= madeFor %></p>
     <br>
-    <p>Version: <%= version %><br>
-    Author: <%= author %><br>
-    Copyright: <%= copyright %><br>
-    Credits: <%= credits %><br>
-    Website: <%= website %></p>
+    <% if (type == 'GJS') { %>
+        <p>Version: <%= version %><br>
+        Author: <%= author %><br>
+        Copyright: <%= copyright %><br>
+        Credits: <%= credits %><br>
+        Website: <%= website %></p>
+    <% } else { %>
+        <p>Version: <%= version %><br>
+        Author: <%= author %><br>
+        Copyright: <%= copyright %><br>
+        Credits: <%= credits %><br>
+        Website: <%= website %></p>
+    <% } %>
   </body>
 </html>
